# DNFS

./: .gitignore  README.md  ising_models.py  ising_theory.py  kolmo_utils.py  main.py  modal_app.py  model.py  pyproject.toml
